# ECE2574

./: .gitignore  README.md
Homework 1/hw1_starter/: ArrayBag.cpp  ArrayBag.h  hw1_test.cpp
Homework 1/hw1_starter(1)/: ArrayBag.cpp  ArrayBag.h  BagInterface.h  CMakeLists.txt  hw1_test.cpp
Homework 1/hw1_starter_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  HW1.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hw1_test.vcxproj  hw1_test.vcxproj.filters
Homework 1/hw1_starter_build(1)/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  HW1.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hw1_test.vcxproj  hw1_test.vcxproj.filters
Homework 1/hw1_starter_build(1)/Debug/: hw1_test.ilk
Homework 1/hw1_starter_build(1)/hw1_test.dir/Debug/hw1_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  (+5 more)
Homework 1/hw1_starter_build/Debug/: hw1_test.ilk
Homework 2/hw2_starter/: CMakeLists.txt  Node.cpp  Node.h  Poly.cpp  Poly.h  PolyInterface.h  callgrind.out.9909  hw2_main.cpp  hw2_test.cpp
Homework 2/hw2_starter_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  HW2.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hw2_main.vcxproj  hw2_main.vcxproj.filters  hw2_test.vcxproj  hw2_test.vcxproj.filters
(+27 files in other folders)
